@@ -92,6 +92,9 @@ x^3 - 162*x^2 + 30, x^12 - 24*x^10 - 10*x^9 + 216*x^8 + 180*x^7 - 844*x^6 -
 y*x^3 + 36*x^2 + 2*y*x + (4/3*y - 20), x^6 - 12*x^4 + (1/3*y - 10)*x^3 + 36*
 x^2 + (-2*y + 60)*x + (-4/3*y + 20)]]
 x^2 + x - 4
+x - 1
+1
+[x - 1, 1]
 [x^8 - x^6 + x^4 - x^2 + 1, [101, 2, 10201], [7607, 567, 5596, 6117, 2594, 9
 634, 4605, 4084], [2678, 1546, 2875, 8203, 2678, 1546, 2875, 8203; 9382, 964
 6, 819, 555, 819, 555, 9382, 9646; 197, 6657, 10004, 3544, 197, 6657, 10004,
@@ -111,4 +114,4 @@ x^2 + x - 4
 + 4*x^2 - 8*x + 16, Mod(2*x^2, x^8 - x^6 + x^4 - x^2 + 1)], [x^4 - 5*x^2 + 5
 , Mod(-x^7 + x^5 - x^3 + 2*x, x^8 - x^6 + x^4 - x^2 + 1)], [x^8 - x^6 + x^4 
 - x^2 + 1, Mod(x, x^8 - x^6 + x^4 - x^2 + 1)]]
-Total time spent: 2404
+Total time spent: 1612
