@@ -70,6 +70,7 @@ HIL  49- polclass could access invalid memory
 BA   57- missing GC in idealramgroups
 BA   58- ellweilpairing failed for supersingular curves in char. 2 [#1910]
 BA   59- Mat()[1..0,1..0] -> SEGV
+PB   60- galoissubcyclo(1,1,fl) ignored fl [#1914]
 
   Added
       1- [libari] ZM_isidentity
